WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
175320
[Soup] Incorrect conversion in msToSoupDate()
https://bugs.webkit.org/show_bug.cgi?id=175320
Summary
[Soup] Incorrect conversion in msToSoupDate()
Zan Dobersek
Reported
2017-08-08 06:51:10 PDT
WTF's monthFromDayInYear() returns a value in the [0,11] range, while soup_date_new() accepts values in the range of [1,12]. Reported and fixed downstream by VaL Doroshchuk:
https://github.com/WebPlatformForEmbedded/WPEWebKit/pull/321
Attachments
Patch
(2.16 KB, patch)
2017-08-08 07:26 PDT
,
Zan Dobersek
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Zan Dobersek
Comment 1
2017-08-08 07:26:34 PDT
Created
attachment 317567
[details]
Patch
Carlos Garcia Campos
Comment 2
2017-08-08 07:55:30 PDT
Comment on
attachment 317567
[details]
Patch Thanks!
Zan Dobersek
Comment 3
2017-08-09 00:00:37 PDT
Comment on
attachment 317567
[details]
Patch Clearing flags on attachment: 317567 Committed
r220444
: <
http://trac.webkit.org/changeset/220444
>
Zan Dobersek
Comment 4
2017-08-09 00:00:41 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug