[Soup] Incorrect conversion in msToSoupDate() https://bugs.webkit.org/show_bug.cgi?id=175320

Reviewed by Carlos Garcia Campos.

Original patch by VaL Doroshchuk.

* platform/network/soup/NetworkStorageSessionSoup.cpp:
(WebCore::msToSoupDate): monthFromDayInYear() returns a value in the [0,11] range,
while soup_date_new() expects a month value in the [1,12] range. The return value
must be thus incremented by one to match that expectation.


Canonical link: https://commits.webkit.org/192074@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@220444 268f45cc-cd09-0410-ab3c-d52691b4dbfc